# Solana_last_message

./: Anchor.toml  README.md
client/: client.ts
programs/last-signal-rust/: Cargo.toml
programs/last-signal-rust/src/: lib.rs
tests/: anchor.ts
